spacing issue

--- a/src/app/pages/forms-and-validation/password/password.component.scss
+++ b/src/app/pages/forms-and-validation/password/password.component.scss
@@ -60,12 +60,26 @@ mat-form-field {
     }
 }
 
+.change-password-form-group {
+    mat-form-field {
+        margin-bottom: -16px;
+        &:last-child {
+            margin-bottom: 8px;
+        }
+    }
+}
+
 .bottom-divider {
     margin-left: -24px !important;
     margin-right: -24px !important;
     position: static !important;
     width: auto !important;
     margin-bottom: 24px;
+}
+
+.validation-list {
+    padding-top: 0;
+    margin-bottom: 32px;
 }
 
 mat-card-actions {
